modified services and project page

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <div id="home" class="page active">
                     <div class="hero-section">
                         <h1 class="glitch-header dial-up-element dial-up-hidden" data-text="Rithvik Ram">Rithvik Ram</h1>
-                        <p class="subtitle dial-up-element dial-up-hidden">System Administrator | Cloud Infrastructure | A/V Technician</p>
+                        <p class="subtitle dial-up-element dial-up-hidden">IT Guy | Music Meister | A/V Technician</p>
                         <p class="dial-up-element dial-up-hidden" style="font-size: 0.9rem; margin-top: 5px;">Reno, NV | <i class="fas fa-envelope"></i> rithvik2001@gmail.com</p>
                         <hr class="win-divider dial-up-element dial-up-hidden">
                     </div>
@@ -113,14 +113,14 @@
                         </div>
                         <div class="skill-card dial-up-element dial-up-hidden" onclick="triggerNav('media')">
                             <div class="card-icon"><i class="fas fa-film"></i></div>
-                            <h3>Media & A/V</h3>
-                            <p>Live Production Support, Audio Mixing, and Creative Content.</p>
+                            <h3>Media</h3>
+                            <p>I did a thing.</p>
                             <span class="link-text">View Media <i class="fas fa-arrow-right"></i></span>
                         </div>
                         <div class="skill-card dial-up-element dial-up-hidden" onclick="triggerNav('services')">
                             <div class="card-icon"><i class="fas fa-toolbox"></i></div>
                             <h3>Services & Skills</h3>
-                            <p>IT Administration, Automation Scripting, and Technical Tutoring.</p>
+                            <p>A/V, Web Design, and Music Tutoring.</p>
                             <span class="link-text">View Services <i class="fas fa-arrow-right"></i></span>
                         </div>
                     </div>
@@ -149,7 +149,7 @@
                         </ul>
                         <hr class="win-divider" style="margin: 15px 0;">
                         <h4>Behavior Technician</h4>
-                        <div class="date-loc">Proud Moments ABA | Henderson, NV | Nov 2024 - Present</div>
+                        <div class="date-loc">Proud Moments ABA | Henderson, NV | Nov 2024 - Feb 2026</div>
                         <ul class="skill-list">
                             <li><strong>Documentation:</strong> Maintained strict HIPAA-compliant records of client interactions.</li>
                             <li><strong>Analysis:</strong> Analyzed data trends to adjust operational procedures in real-time.</li>
@@ -169,15 +169,15 @@
                         </ul>
                     </div>
                     <div class="win-panel">
-                        <h3><i class="fas fa-terminal"></i> Scripting & Automation</h3>
+                        <h3><i class="fas fa-terminal"></i> Bass & Guitar</h3>
                         <ul class="skill-list">
-                            <li><strong>PowerShell:</strong> Automating administrative tasks and VM lifecycle management.</li>
+                            <li><strong>Music:</strong> Hey I can teach you how to play and who knows maybe you'll learn some theory on the way.</li>
                         </ul>
                     </div>
                     <div class="win-panel">
-                        <h3><i class="fas fa-code"></i> Web & Design</h3>
+                        <h3><i class="fas fa-code"></i> Web Design</h3>
                         <ul class="skill-list">
-                            <li><strong>Design:</strong> UI/UX Prototyping in Figma.</li>
+                            <li>Need a website that actually works and doesn’t look like it was built in 2003? Or maybe that's exactly the vibe you're looking for. I'll build it anyway you want boss.</li>
                         </ul>
                     </div>
                 </div>
@@ -205,6 +205,25 @@
                         <div class="date-loc">C# Development & SDLC</div>
                         <ul class="project-list">
                             <li>Engineered a C# event-driven architecture to handle complex state management and JSON data persistence.</li>
+							<li>Managed the full Software Development Life Cycle (SDLC) over a 10-week sprint, including debugging, refactoring, and version control via Git.</li>
+							<li>Conducted User Acceptance Testing (UAT) to identify software bugs and implement stability patches.</li>
+                        </ul>
+                    </div>
+					<div class="win-panel">
+                        <h3>Non-Profit Web Solution</h3>
+                        <div class="date-loc">Web Development & UI/UX</div>
+                        <ul class="project-list">
+                            <li>Designed and deployed a responsive website for the Pearls of Africa Children's Fund, translating client requirements into technical specifications.</li>
+							<li>Utilized Figma for high-fidelity prototyping to ensure UI/UX accessibility compliance before coding.</li>
+							<li>https://www.pearlschildrensfund.org/our-story/</li>
+                        </ul>
+                    </div>
+					<div class="win-panel">
+                        <h3>Cybersecurity Seminar Instructor</h3>
+                        <div class="date-loc">Senior Citizen Community Outreach</div>
+                        <ul class="project-list">
+                            <li>Designed and delivered a technical workshop on cybersecurity fundamentals (Phishing, 2FA, Password Security).</li>
+							<li>Translated complex security concepts into accessible language for a non-technical audience of 30+ attendees.</li>
                         </ul>
                     </div>
                 </div>
