fixed project link

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                         <ul class="project-list">
                             <li>Designed and deployed a responsive website for the Pearls of Africa Children's Fund, translating client requirements into technical specifications.</li>
 							<li>Utilized Figma for high-fidelity prototyping to ensure UI/UX accessibility compliance before coding.</li>
-							<li>https://www.pearlschildrensfund.org/our-story/</li>
+							<li><a href="https://www.pearlschildrensfund.org/our-story/">Pearls Children's Fund</a></li>
                         </ul>
                     </div>
 					<div class="win-panel">
